swagger and update/delete handlers
